tests/errors/invoke-trig-too-often.fil
extern "dummy.sv" {
  comp Mult<G: 5>(
    @interface[G] go_G: 1,
  ) -> ();
}

comp Main<T: 3>(@interface[T] go_T: 1) -> () {
  M := new Mult;
  m0 := invoke M<T+1>;
}
